fix some lint warnings about Integer.valueOf