@@ -52,9 +52,9 @@ public class ReplyEditor extends Activity
         setContentView(R.layout.replyeditor);
 
         /* stash our statuses in the ack status list*/
-        mAckStatusList.add(new Integer(0));
-        mAckStatusList.add(new Integer(1));
-        mAckStatusList.add(new Integer(2));
+        mAckStatusList.add(Integer.valueOf(0));
+        mAckStatusList.add(Integer.valueOf(1));
+        mAckStatusList.add(Integer.valueOf(2));
 
         mSubjectView = (EditText) findViewById(R.id.subject);
 
